Fix issue on about__container to solve text alignment issue on about__link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,7 +336,7 @@ a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
+    /* text-align: center; */
     gap: 2rem;
     max-width: 288px;
     margin: 0 auto;
